# desi-w0wa-svd

./: .gitignore  README.md  pyproject.toml  requirements.txt
data/: canonical_basis_bao.npz  chi2_values.json  paper_numbers.json  sailer_2025_literature.json
paper/: main.tex  paperclaims.sty  references.bib
paper/sections/: appendix_universality.tex  c0_tensions.tex  conclusions.tex  curvature.tex  data_and_method.tex  extensions.tex  introduction.tex  universal_c0.tex  w0wa_reinterpretation.tex
scripts/: build_dashboard.py  compute_paper_numbers.py  download_data.sh  make_all_figures.py  precompute_figure_data.py  reproduce.sh
src/svd_analysis/: __init__.py  chains.py  cosmology.py  data.py  official_data.py  plotting.py  utils.py
structure/: claim_dashboard.html  claims.yaml  dependency_graph.md  figures.yaml  logic.yaml  scripts.yaml
tests/: __init__.py  conftest.py  test_chains.py  test_cosmology.py  test_integration.py  test_sn_binning.py
